Operazioni crud implementate su Person
